whoops undid too much, fixing buttons

--- a/workout-app/styles/styles.css
+++ b/workout-app/styles/styles.css
@@ -38,7 +38,7 @@
 
   #allLayouts {
     overflow: auto;
-    top: 200px;
+    top: 250px;
     bottom: 20px;
     position: fixed;
     border: dashed 2px #DBDBDB;
@@ -265,4 +265,3 @@ body.application > .container-fluid,
 .comment {
   font-style: italic;
 }
-
